# datalad-metalad-fairmeta

./: README.md  mkdocs.yml  pyproject.toml  setup.cfg  setup.py
.github/workflows/: docs.yml
datalad_metalad_fairextract/: __init__.py  _version.py  _version_build.py  cli.py
datalad_metalad_fairextract/extractors/: __init__.py  base.py  cosmx.py  fastq.py  h5ad.py  hyperion.py  macsima.py  manual.py  merscope.py  molecular_cartography.py  ome_tiff.py  phenocycler.py  spatialdata.py  tiff.py  visium_hd.py  xenium.py
datalad_metalad_fairextract/schemas/: base.schema.json  cosmx.schema.json  fastq.schema.json  h5ad.schema.json  hyperion.schema.json  macsima.schema.json  manual.schema.json  merscope.schema.json  molecular_cartography.schema.json  ome_tiff.schema.json  phenocycler.schema.json  spatialdata.schema.json  tiff.schema.json  visium_hd.schema.json  xenium.schema.json
docs/: index.md  installation.md  quickstart.md  templates.md  templates_overview.md  testing.md
docs/api/: extractors.md
docs/edge_cases/: annex_files.md  index.md  interactive_mode.md  large_datasets.md  missing_files.md  validation_errors.md
docs/examples/: basic_usage.md  batch_processing.md  index.md  spatial_omics.md
docs/extractors/: cosmx.md  fastq.md  h5ad.md  hyperion.md  index.md  macsima.md  manual.md  merscope.md  molecular_cartography.md  ome_tiff.md  phenocycler.md  spatialdata.md  tiff.md  visium_hd.md  xenium.md
docs/metalad/: index.md
docs/schemas/: index.md  ontologies.md
docs/template_docs/: examples.md  merging.md  ontology.md  quickstart.md
docs/templates/: examples.md  merging.md  ontology.md  quickstart.md
templates/: README.md  dataset_metadata.yaml.template  samples.yaml.template
tests/: __init__.py  conftest.py  test_base.py  test_dataset_extractors.py  test_fastq.py  test_h5ad.py  test_manual.py  test_ome_tiff.py  test_spatialdata.py  test_tiff.py
tests/test_data/: __init__.py  public.py  synthetic.py
