[metadata]
name = datalad-metalad-fairmeta
url = https://github.com/your-org/datalad-metalad-fairmeta
author = Your Name
author_email = you@example.com
description = FAIR metadata extractors for spatial biology data
long_description = file: README.md
long_description_content_type = text/markdown; charset=UTF-8; variant=GFM
license = MIT
classifiers =
    Programming Language :: Python
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3

[options]
python_requires = >= 3.9
install_requires =
    datalad >= 0.18
    datalad-metalad >= 0.4
    jsonschema >= 4.0
    click >= 8.0
packages = find_namespace:
include_package_data = True

[options.extras_require]
ome_tiff =
    ome-types >= 0.4.0
h5ad =
    anndata >= 1.7.0
spatialdata =
    spatialdata >= 0.7.0
all =
    ome-types >= 0.4.0
    anndata >= 1.7.0
    spatialdata >= 0.7.0
    tifffile >= 2021.0
docs =
    mkdocs >= 1.5
    mkdocs-material >= 9.0
    mkdocstrings[python] >= 0.20
test =
    pytest
    pytest-cov
